--- a/apple-pie/index.html
+++ b/apple-pie/index.html
@@ -16,7 +16,7 @@
           be my favorite and has won me several first place prizes in local competitions. I hope it becomes one of your
           favorites as well!</p>
           <div>
-            <img class= "centrado" src="/apple-pie/images/recipe-info.png" alt="Recipe Info">
+            <img class= "centrado" src="images/recipe-info.png" alt="Recipe Info">
           </div>
         <hr> 
       </section>
@@ -34,7 +34,7 @@
           <li>- 8 Granny Smith apples - peeled, cored and sliced</li>
          </ul>
          <div>
-          <img src="/apple-pie/images/cooking-info.png" alt="Recipe Info">
+          <img src="images/cooking-info.png" alt="Recipe Info">
         </div>
           <hr>
       </section>
